--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "outputHashing": "all",
             "assets": [
               {
                 "glob": "**/*",
